# pyppl_web

./: .gitignore  .pre-commit-config.yaml  .tagitrc  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
pyppl_web/: __init__.py  app.py  shared.py  sockets.py  utils.py
pyppl_web/templates/: index.html
pyppl_web/templates/semantic/: index.html
pyppl_web/templates/semantic/static/css/: main.css  semantic.min.css
pyppl_web/templates/semantic/static/js/: codejar.min.js  component_factory.js  cytoscape-klay.js  cytoscape_factory.js  jobfuncs_factory.js  main.js  socket_factory.js  tab_factory.js
pyppl_web/templates/static/js/: socket-events.js
tests/: test.py
