[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_web"
version = "0.0.1"
description = "Web client to monitor pipeline processes for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_web"
repository = "https://github.com/pwwang/pyppl_web"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"
flask = "^1.1"
flask-socketio = "^4.3"
diot = "*"
gevent-websocket = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.plugins.pyppl]
pyppl_web = "pyppl_web:PyPPLWeb"
